user-management init branch